--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css/styles.css">
 </head>
 <body>
-    <h1>Mundo Designer</h1>
+    <h1>Develop designer</h1>
 <h2>Mundo Web Designer</h2>
 <hr>
 <p class="introducao">Mundo Designer sempre fazendo o <b class="negrito">melhor</b> para você!</p>
@@ -17,7 +17,7 @@
     <li>Cartão de Visita</li>
     <li>Panfletos</li>
     <li>Banner</li>
-    <li>Criação de site profissionalc com Técnicas avançadas</li>
+    <li>Criação de site profissional</li>
 </ul>
 
 <p>Para mais informações</p>
